--- a/BikeStore/BikeStore.Web/Views/Bikes/Details.cshtml
+++ b/BikeStore/BikeStore.Web/Views/Bikes/Details.cshtml
@@ -115,9 +115,9 @@
 @if (Model.SellerId.Equals(UserManager.GetUserId(User)))
 {
     <a class="btn btn-success col-lg-3" role="button" asp-area="" asp-controller="Bikes" asp-action="Update" asp-route-id="@Model.Id">Update ad</a>
+    <span class="col-lg-3"></span>
     <form asp-controller="Bikes" asp-action="Delete" method="post">
         <input type="hidden" name="id" value="@Model.Id" />
-        <span class="col-lg-3"></span>
-        <button type="button" class="btn btn-danger col-lg-3">Delete ad</button>
+        <button type="submit" class="btn btn-danger col-lg-3">Delete ad</button>
     </form>
 }
