Fixed Seller Username in Details page and change the redirect after update to the Details page

--- a/BikeStore/BikeStore.Web/Views/Bikes/Details.cshtml
+++ b/BikeStore/BikeStore.Web/Views/Bikes/Details.cshtml
@@ -22,7 +22,7 @@
     </div>
     <div>
         <label asp-for="SellerUsername"></label>
-        <span>Username</span>
+        <span>@Model.SellerUsername</span>
     </div>
     <div>
         <label asp-for="Price"></label>
